<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:layoutDirection="ltr">

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/photo_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/slider" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cutout_safe_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageButton
                android:id="@+id/back_button"
                android:layout_width="@dimen/round_button_small_x"
                android:layout_height="@dimen/round_button_small_x"
                android:layout_marginStart="@dimen/margin_xsmall"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_button_alt"
                android:padding="@dimen/stroke_medium"
                android:scaleType="fitCenter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

        <ImageButton
                android:id="@+id/share_button"
                android:layout_width="@dimen/round_button_small_x"
                android:layout_height="@dimen/round_button_small_x"
                android:layout_marginEnd="@dimen/margin_xlarge"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share_button_alt"
                android:padding="@dimen/stroke_medium"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_share" />

        <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="@dimen/round_button_small_x"
                android:layout_height="@dimen/round_button_small_x"
                android:layout_marginStart="@dimen/margin_xlarge"
                android:layout_marginBottom="@dimen/margin_small"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete_button_alt"
                android:padding="@dimen/stroke_medium"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
