<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/camera_ui_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- Camera control and gallery buttons -->
    <ImageButton
            android:id="@+id/camera_switch_button"
            android:layout_width="@dimen/round_button_medium"
            android:layout_height="@dimen/round_button_medium"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:background="@android:color/transparent"
            android:contentDescription="@string/switch_camera_button_alt"
            android:padding="@dimen/spacing_small"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/ic_switch" />

    <ImageButton
            android:id="@+id/camera_capture_button"
            android:layout_width="@dimen/round_button_large"
            android:layout_height="@dimen/round_button_large"
            android:layout_marginBottom="@dimen/shutter_button_margin"
            android:background="@drawable/ic_shutter"
            android:contentDescription="@string/capture_button_alt"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
            android:id="@+id/photo_view_button"
            android:layout_width="@dimen/round_button_medium"
            android:layout_height="@dimen/round_button_medium"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_xlarge"
            android:background="@drawable/ic_outer_circle"
            android:contentDescription="@string/gallery_button_alt"
            android:padding="@dimen/spacing_large"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_photo" />

    <Switch
            android:id="@+id/dynamic_switch"
            android:layout_width="@dimen/round_button_small_x"
            android:layout_height="@dimen/round_button_small_x"
            app:layout_constraintBottom_toTopOf="@+id/camera_capture_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
